<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="bread_house_count">统计</string>
    <string name="action_settings">Settings</string>
    <string name="kind_name">种类</string>
    <string name="cake">蛋糕</string>
    <string name="pizza">披萨</string>
    <string name="bread">面包</string>
    <string name="sale1">当前销售量</string>
    <string name="num1">当前数量</string>
    <string name="edit">编辑</string>
    <string name="grade">绩效</string>
    <string name="save">保存</string>
    <string name="main">BreadHouse</string>
    <string name="make_cake">MakeCake</string>
    <string name="make_pizza">MakePizza</string>
    <string name="make_bread">MakeBread</string>
    <string name="sale_cake">SaleCake</string>
    <string name="sale_pizza">SalePizza</string>
    <string name="sale_bread">SaleBread</string>
    <string name="count">Count</string>
    <string name="edit_activity">Edit</string>
    <string name="drop">Drop</string>
    <string name="product">生产</string>
    <string name="sale">售出</string>
    <string name="dropfood">过期</string>
    <string name="name">Name</string>
    <string name="putin">请输入</string>
    <string name="kind1">Kind</string>
    <string name="id">ID :</string>
    <string name="size">Size</string>
    <string name="Cancel">Cancel</string>
    <string name="cancel">取消</string>
    
    <string name="next">Next</string>
    <string name="display">Display</string>
    <string name="dropfoodid">过期食物ID</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
