<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="20dp"
    tools:context="${relativePackage}.${activityClass}" >

     <TextView
         android:id="@+id/t1"
         android:layout_width="40dp"
         android:layout_height="50dp"
         android:gravity="center_vertical"
         android:text="@string/id"
         android:textSize="20sp" />
	 
	 <EditText
	     android:id="@+id/e1"
	     android:layout_width="180dp"
	     android:layout_height="50dp"
	     android:layout_toRightOf="@id/t1"
	     android:hint="@string/putin" />

	 <Button
	     android:id="@+id/b1"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_alignBaseline="@+id/t1"
	     android:layout_alignBottom="@+id/t1"
	     android:layout_alignParentRight="true"
	     android:layout_marginRight="16dp"
	     android:text="@string/sale_pizza" />

</RelativeLayout>
